src/cli/snapshots/axinite__cli__tests__long_help_output.snap
---
source: src/cli/mod.rs
assertion_line: 318
expression: help
---
Axinite is a secure AI assistant. Use 'axinite <subcommand> --help' for details.
Examples:
  axinite run  # Start the agent
  axinite config list  # List configs

Usage: axinite [OPTIONS] [COMMAND]

Commands:
  run         Run the AI agent
  onboard     Run interactive setup wizard
  config      Manage app configs
  tool        Manage WASM tools
  registry    Browse/install extensions
  mcp         Manage MCP servers
  memory      Manage workspace memory
  pairing     Manage DM pairing
  service     Manage OS service
  doctor      Run diagnostics
  status      Show system status
  completion  Generate completions
  import      Import from other AI systems
  help        Print this message or the help of the given subcommand(s)

Options:
      --cli-only
          Run in interactive CLI mode only (disable other channels)

      --no-db
          Skip database connection (for testing)

  -m, --message <MESSAGE>
          Single message mode - send one message and exit

  -c, --config <CONFIG>
          Configuration file path (optional, uses env vars by default)

      --no-onboard
          Skip first-run onboarding check

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
